language file change

--- a/l10n.toml
+++ b/l10n.toml
@@ -15,8 +15,8 @@ branches = [
 
 [[paths]]
   reference = "app/src/main/res/values/strings.xml"
-  l10n = "app/src/main/res/values-{android_locale}/strings.xml"
-
-[[paths]]
-  reference = "app/src/main/res/values/strings.xml"
-  l10n = "app/src/main/res/values-{android_locale}/strings.xml"
+  l10n = "app/src/main/res/values-{locale}/strings.xml"
+  locales = [
+      "ru",
+      "rs",
+  ]
